<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/white"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".view.fragment.HomeFragment">

    <androidx.appcompat.widget.AppCompatTextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="14sp"
        android:textColor="@color/black_heading"
        android:text="@string/youtube_link"
        android:fontFamily="@font/plus_jakarta_sans_semibold"/>

    <RelativeLayout
        android:id="@+id/rlLinkRoot"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="14dp"
        android:background="@drawable/bg_selector_edittext">
        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/etLink"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="14sp"
            android:background="@null"
            android:maxLines="1"
            android:ellipsize="end"
            android:hint="@string/link_hint"
            android:textColor="@color/black_heading"
            android:fontFamily="@font/plus_jakarta_sans_semibold"
            android:inputType="textWebEditText"
            android:drawableStart="@drawable/img_link_enabled"
            android:drawablePadding="16dp"
            android:layout_marginEnd="16dp"
            android:layout_toStartOf="@id/ivClearText"/>
        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/ivClearText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/img_clear"
            android:visibility="invisible"
            android:layout_alignTop="@id/etLink"
            android:layout_alignBottom="@id/etLink"
            android:layout_alignParentEnd="true"/>
    </RelativeLayout>


    <androidx.appcompat.widget.AppCompatTextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="14sp"
        android:layout_marginTop="14dp"
        android:visibility="gone"
        android:textColor="@color/black_heading"
        android:text="@string/destination_folder"
        android:fontFamily="@font/plus_jakarta_sans_semibold"/>

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tvDestination"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="14dp"
        android:maxLines="1"
        android:ellipsize="start"
        android:background="@drawable/bg_selector_edittext"
        android:visibility="gone"
        android:textSize="14sp"
        android:textColor="@color/black_heading"
        android:text="@string/default_download_location"
        android:fontFamily="@font/plus_jakarta_sans_semibold"
        android:drawableStart="@drawable/img_destination_folder_enabled"
        android:drawablePadding="16dp"
        android:paddingEnd="16dp"/>

    <androidx.appcompat.widget.AppCompatTextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="14sp"
        android:layout_marginTop="12sp"
        android:drawablePadding="6dp"
        android:drawableStart="@drawable/img_info"
        android:textColor="@color/grey_regular"
        android:text="@string/downloaded_file_will_be_saved_to_downloads_folder"
        android:fontFamily="@font/plus_jakarta_sans_medium"/>

    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:weightSum="2"
        android:layout_marginTop="24dp">

        <RelativeLayout
            android:id="@+id/rlDownload"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="5dp"
            android:background="@drawable/bg_selector_button">
            <ProgressBar
                android:id="@+id/progress"
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:visibility="gone"
                android:layout_centerVertical="true"
                android:layout_toStartOf="@id/tvDownload"
                android:indeterminateDrawable="@drawable/bg_gradient_progress"
                android:layout_marginHorizontal="6dp"
                android:indeterminate="true"/>
            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tvDownload"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/download_audio"
                android:textAllCaps="false"
                android:layout_centerInParent="true"
                android:paddingHorizontal="5dp"
                android:fontFamily="@font/plus_jakarta_sans_bold"
                android:textSize="14sp"
                android:textColor="@color/white"/>
        </RelativeLayout>
        <RelativeLayout
            android:id="@+id/rlDownloadVideo"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="5dp"
            android:background="@drawable/bg_selector_button">
            <ProgressBar
                android:id="@+id/progressVideo"
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:visibility="gone"
                android:layout_centerVertical="true"
                android:layout_toStartOf="@id/tvDownloadVideo"
                android:indeterminateDrawable="@drawable/bg_gradient_progress"
                android:layout_marginHorizontal="6dp"
                android:indeterminate="true"/>
            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tvDownloadVideo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/download_video"
                android:textAllCaps="false"
                android:layout_centerInParent="true"
                android:paddingHorizontal="5dp"
                android:fontFamily="@font/plus_jakarta_sans_bold"
                android:textSize="14sp"
                android:textColor="@color/white"/>
        </RelativeLayout>
    </androidx.appcompat.widget.LinearLayoutCompat>
</androidx.appcompat.widget.LinearLayoutCompat>