<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:paddingVertical="8dp"
    tools:context=".view.fragment.MoveToLocationFragment">

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tvTitle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:textSize="12sp"
        android:textColor="@color/red"
        android:text="@string/failed"
        android:fontFamily="@font/plus_jakarta_sans_semibold"
        app:layout_constraintEnd_toStartOf="@id/tvDownloadProgress"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/tvDownloadProgress"
        android:layout_width="16dp"
        android:layout_height="16dp"
        android:src="@drawable/img_failure"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>

    <ProgressBar
        android:id="@+id/downloadProgress"
        android:layout_width="0dp"
        android:layout_height="7dp"
        android:progressDrawable="@drawable/bg_horizontal_progress_red"
        style="?android:attr/progressBarStyleHorizontal"
        android:progress="100"
        android:layout_marginTop="12dp"
        app:layout_constraintTop_toBottomOf="@id/tvTitle"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>
    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tvError"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="14sp"
        android:layout_marginTop="12sp"
        android:drawablePadding="4dp"
        android:drawableStart="@drawable/img_error_note"
        android:textColor="@color/grey_regular"
        android:text="@string/where_you_want_to_save_the_mp3"
        android:fontFamily="@font/plus_jakarta_sans_medium"
        app:layout_constraintTop_toBottomOf="@id/downloadProgress"
        app:layout_constraintStart_toStartOf="parent"/>

    <RelativeLayout
        android:id="@+id/rlDownload"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:background="@drawable/bg_selector_button">
        <ProgressBar
            android:id="@+id/progress"
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:visibility="gone"
            android:layout_centerVertical="true"
            android:layout_toStartOf="@id/tvDownload"
            android:indeterminateDrawable="@drawable/bg_gradient_progress"
            android:layout_marginEnd="6dp"
            android:indeterminate="true"/>
        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tvDownload"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/download_another_mp3"
            android:textAllCaps="false"
            android:layout_centerInParent="true"
            android:paddingHorizontal="5dp"
            android:fontFamily="@font/plus_jakarta_sans_bold"
            android:textSize="14sp"
            android:textColor="@color/white"/>
    </RelativeLayout>

</androidx.constraintlayout.widget.ConstraintLayout>